# werk

./: .gitignore  .mcp.json  .ubsignore  AUDIT-cycles.md  AUDIT-dedup.md  AUDIT-error-handling.md  AUDIT-legacy.md  AUDIT-slop.md  AUDIT-types-weak.md  AUDIT-types.md  AUDIT-unused.md  CLAUDE.md  Cargo.toml  README.md  create-v05-beads.sh  tensions.json
.beads/: issues.jsonl
.factory/: init.sh  services.yaml
.githooks/: pre-commit  pre-commit-user  update-readme-tree.py
designs/: INDEX.md  README.md  addressing-sessions-gestures.md  architecture-synthesis.md  c-id-collision-disambiguation.md  cli-patterns-study.md  cli-visual-display.md  command-center-and-time-axis.md  e-one-shot-with-structured-suggestions.md  f-tui-rebuild.md  frankensuite-evaluation.md  fsqlite-corruption-incident.md  gitbutler-agent-workflow.md  h-v05-master-plan.md  hook-infrastructure-design.md  i-time-travel-field-replay.md  jeffrey-post-draft.md  observational-analysis-stance.md  sigil-engine.md  structural-graph-overlay.md  thesis-of-werk.md  three-orientations.md  tui-console-v2-proposal.md  tui-console-v2.md  tui-rewrite-plan.md  tui-shaping.md  visualization-research.md  werk-business-foundation.md  werk-conceptual-foundation.md  werk-log-1.0-draft-spec.md  werk-run-design-space.md  werk-watch.md
lab/: Home.md  Map of Content.md
lab/Concepts/: Agent.md  (+109 more)
research/: HANDOFF.md  anima_plan.md  cli-agent-optimization.md  hooks-integration-design.md  horizon-spec.md  id-design-exploration.md  v2-plan.md
scripts/: snapshot-capabilities.sh
sd-core/: Cargo.toml
sd-core/examples/: import_json.rs
sd-core/src/: address.rs  dynamics.rs  engine.rs  events.rs  frontier.rs  graph.rs  horizon.rs  lib.rs  mutation.rs  projection.rs  search.rs  store.rs  temporal.rs  tension.rs  tree.rs
sd-core/tests/: corruption_resilience.rs  epoch_integrity.rs  frontier_epochs.rs  integration.rs  store_discovery.rs
skills/: SKILL.md
specs/: README.md  concurrency.qnt  forest.qnt  gestures.qnt  temporal.qnt  tension.qnt  types.qnt  werk.qnt  werk_witnesses.qnt
video/: RESEARCH.md  package-lock.json  package.json
werk-app/src-tauri/: Cargo.toml  tauri.conf.json
werk-app/src-tauri/src/: main.rs
werk-cli/: Cargo.toml
werk-cli/src/: agent_response.rs  dynamics.rs  editor.rs  error.rs  hints.rs  lib.rs  main.rs  mutation_echo.rs  output.rs  palette.rs  prefix.rs  serialize.rs  workspace.rs
werk-cli/src/commands/: add.rs  batch.rs  compose_up.rs  config.rs  context.rs  desire.rs  diff.rs  doctor.rs  doctor_robot_docs.md  epoch.rs  field.rs  flush.rs  ground.rs  health.rs  hold.rs  hooks.rs  horizon.rs  init.rs  insights.rs  list.rs  log.rs  merge.rs  mod.rs  move_cmd.rs  note.rs  notes.rs  nuke.rs  position.rs  reality.rs  recur.rs  release.rs  reopen.rs  resolve.rs  rm.rs  run.rs  serve.rs  show.rs  sigil.rs  snooze.rs  spaces.rs  (+7 more)
werk-cli/src/commands/daemon/: linux.rs  macos.rs  mod.rs
werk-cli/tests/: add_show.rs  color.rs  config.rs  context.rs  cross_area.rs  cross_area_dynamics.rs  discovery.rs  doctor.rs  doctor_quint.rs  horizon.rs  init.rs  json.rs  lifecycle.rs  move_note.rs  nuke.rs  port_range_parity.rs  reality_desire.rs  run.rs  show_dynamics.rs  sigil.rs  sigil_lifecycle.rs  skeleton.rs  toon.rs  tree.rs
werk-cli/tests/golden/: capabilities.json
werk-core/: Cargo.toml
werk-core/examples/: import_json.rs
werk-core/src/: address.rs  doctor_run.rs  edge.rs  engine.rs  events.rs  frontier.rs  graph.rs  lib.rs  mutation.rs  projection.rs  search.rs  store.rs  temporal.rs  tension.rs  tree.rs
werk-core/src/ir/: attribute_graph.rs  epoch_series.rs  mod.rs  tension_list.rs  tension_tree.rs
werk-core/tests/: corruption_resilience.rs  doctor_rec02_toctou.rs  epoch_integrity.rs  frontier_epochs.rs  integration.rs  store_discovery.rs
werk-mcp/: Cargo.toml
werk-mcp/src/: lib.rs  tools.rs
werk-shared/: Cargo.toml
werk-shared/src/: agent_response.rs  aggregate.rs  batch_mutation.rs  config.rs  config_registry.rs  cross_space.rs  daemon_net.rs  daemon_workspaces.rs  dto.rs  duration.rs  error.rs  flush.rs  hooks.rs  lib.rs  palette.rs  prefix.rs  registry.rs  util.rs  value_labels.rs  workspace.rs
werk-shared/src/cli_display/: glyphs.rs  mod.rs  palette.rs
werk-sigil/: Cargo.toml
werk-sigil/presets/: contemplative.toml  glance.toml  identity.toml  oracle.toml  snapshot.toml
werk-sigil/src/: animation.rs  archive.rs  combinators.rs  ctx.rs  engine.rs  error.rs  expr.rs  hot_reload.rs  ir.rs  lib.rs  logic.rs  scope.rs  sigil.rs  toml_schema.rs
werk-sigil/src/glyphs/: alchemical.rs  geomantic.rs  handdrawn.rs  mod.rs
werk-sigil/src/registry/: attribute.rs  channel.rs  glyph.rs  mark.rs  mod.rs
werk-sigil/src/stages/: encoder.rs  featurizer.rs  layouter.rs  mod.rs  renderer.rs  selector.rs  stylist.rs
werk-sigil/tests/: animation.rs  archive.rs  bench.rs  combinators.rs  error_handling.rs  hot_reload.rs  pipeline_smoke.rs  presets.rs
werk-sigil/tests/fixtures/: mod.rs  small_tree.rs
werk-tab/: README.md  app.js  index.html  manifest.json  style.css
werk-tui/: Cargo.toml
werk-tui/examples/: leto_prototype.rs
werk-tui/src/: agent.rs  app.rs  deck.rs  deck_zones.rs  feedback.rs  focus.rs  glyphs.rs  help.rs  helpers.rs  horizon.rs  input.rs  inspector.rs  layout.rs  lever.rs  lib.rs  logbase.rs  modal.rs  msg.rs  palette.rs  persistence.rs  render.rs  search.rs  session_log.rs  state.rs  survey.rs  survey_tree.rs  theme.rs  toast.rs  types.rs  undo.rs  update.rs  vlist.rs
werk-tui/src/overlays/: command_palette.rs  health.rs  help.rs  input.rs  insights.rs  lever_detail.rs  mod.rs  reflect.rs  search.rs  toasts.rs  trajectory.rs  what_if.rs
werk-tui/src/views/: agent_view.rs  dashboard.rs  detail.rs  dynamics_summary.rs  focus.rs  lever_bar.rs  mod.rs  neighborhood.rs  ticker.rs  timeline.rs  tree.rs  welcome.rs
werk-tui/tests/: tui_flows.rs
werk-web/: Cargo.toml  index.html
werk-web/src/: lib.rs
werk-web/src/trmnl-templates/: deadlines.liquid  epoch.liquid  focus.liquid  horizon.liquid  tree.liquid
werk-web/tests/: parity.rs  sigil.rs  sigil_stream.rs
(+250 files in other folders)
