[package]
name = "sd-core"
version = "0.1.0"
edition = "2021"
description = "Structural dynamics grammar — a faithful computational model of Fritz's structural tension"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
