[package]
name = "werk"
version = "1.1.0"
edition = "2021"
description = "Operative instrument for structural dynamics"

[[bin]]
name = "werk"
path = "src/main.rs"

[dependencies]
sd-core = { path = "../sd-core" }
werk-shared = { path = "../werk-shared" }
werk-tui = { path = "../werk-tui" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
thiserror = "2"
dirs = "6"
ulid = "1"
which = "7"
serde_yaml = "0.9"
regex = "1"
terminal_size = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
