[package]
name = "werk"
version = "1.6.0"
edition = "2024"
description = "Operative instrument for structural dynamics"

[[bin]]
name = "werk"
path = "src/main.rs"

[dependencies]
werk-core = { path = "../werk-core" }
werk-shared = { path = "../werk-shared" }
werk-mcp = { path = "../werk-mcp" }
werk-tui = { path = "../werk-tui" }
werk-web = { path = "../werk-web" }
werk-sigil = { path = "../werk-sigil" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
blake3 = "1"
dirs = "6"
ulid = "1"
serde_yaml = "0.9"
terminal_size = "0.4"
textwrap = "0.16.2"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
