[package]
name = "werk-core"
version = "1.6.0"
edition = "2024"
description = "Structural dynamics grammar — a faithful computational model of Fritz's structural tension"

[dependencies]
fsqlite = "0.1.2"
fsqlite-types = "0.1.2"
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "5"
fnx-classes = { git = "https://github.com/Dicklesworthstone/franken_networkx" }
fnx-algorithms = { git = "https://github.com/Dicklesworthstone/franken_networkx" }
fnx-runtime = { git = "https://github.com/Dicklesworthstone/franken_networkx" }
frankensearch = { git = "https://github.com/Dicklesworthstone/frankensearch", default-features = false, features = ["hash"] }
asupersync = "0.2.9"

[dev-dependencies]
tempfile = "3"
