[package]
name = "werk-core"
version = "1.6.0"
edition = "2024"
description = "Structural dynamics grammar — a faithful computational model of Fritz's structural tension"

[dependencies]
fsqlite = { git = "https://github.com/Dicklesworthstone/frankensqlite", rev = "05e87363" }
fsqlite-types = { git = "https://github.com/Dicklesworthstone/frankensqlite", rev = "05e87363" }
fsqlite-mvcc = { git = "https://github.com/Dicklesworthstone/frankensqlite", rev = "05e87363" }
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
dirs = "5"
fnx-classes = { git = "https://github.com/Dicklesworthstone/franken_networkx" }
fnx-algorithms = { git = "https://github.com/Dicklesworthstone/franken_networkx" }
fnx-runtime = { git = "https://github.com/Dicklesworthstone/franken_networkx" }
frankensearch = { git = "https://github.com/Dicklesworthstone/frankensearch", rev = "03060d51823cf62cf22d415043d7808a8a3cf034", default-features = false, features = ["hash"] }
asupersync = "0.3.1"
blake3 = "1"

[dev-dependencies]
tempfile = "3"
