[package]
name = "werk-shared"
version = "1.5.0"
edition = "2024"
description = "Shared types and logic for werk: workspace, config, error, prefix resolution"

[dependencies]
sd-core = { path = "../sd-core" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
serde_yaml = "0.9"
thiserror = "2"
owo-colors = "4.3.0"

[dev-dependencies]
tempfile = "3"
