[package]
name = "werk-tui"
version = "1.4.0"
edition = "2024"

[dependencies]
sd-core = { path = "../sd-core" }
werk-shared = { path = "../werk-shared" }
ftui = { version = "0.2", features = ["crossterm"] }
ftui-runtime = { version = "0.2", features = ["state-persistence"] }
crossterm = "0.28"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
which = "7"
notify = "7"
