[package]
name = "werk-tui"
version = "1.6.0"
edition = "2024"

[dependencies]
werk-core = { path = "../werk-core" }
werk-shared = { path = "../werk-shared" }
ftui = { git = "https://github.com/Dicklesworthstone/frankentui", rev = "d73c9f47", features = ["crossterm"] }
ftui-runtime = { git = "https://github.com/Dicklesworthstone/frankentui", rev = "d73c9f47", features = ["state-persistence"] }
crossterm = "0.28"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
